[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rostmerge"
dynamic = ["version"]
description = 'TeamSnap/USATF Roster Merge Tool'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Michael E Uhl", email = "michael.uhl@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "openpyxl"
]

[project.urls]
Homepage = "https://github.com/michaeluhl/RostMerge"
Source = "https://github.com/michaeluhl/RostMerge"

[tool.hatch.version]
path = "src/rostmerge/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rostmerge"]

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore check for `print` statements
  "T201",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
